# VerTeX

./: CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg  setup.py  tasks.py
vertex2tex/: __init__.py  config.py  document.py  excep.py  v2t.py
vertex2tex/test/: test_compress.py  test_tokenize.py  test_translate.py
