[metadata]
name = vertex2tex
version = 0.3.4
license = MIT
url = https://github.com/skieffer/VerTeX
description = VerTeX: Verbal TeX
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = find:

[options.packages.find]
exclude = test

[options.extras_require]
dev =
    pytest
    build
    twine
    invoke
